--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="C:\Users\SUYASH GAIKWAD\OneDrive\Desktop\Myportpholio\img\portfolio\TCS NQT Result_page-0001.jpg" alt="portfolio" />
+                     <img src="TCS NQT Result_page-0001.jpg" alt="portfolio" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>TCS NAtional Qualifier Test</h4>
