--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      <h1>Suyash Gaikwad</h1>
                      <h3>I Build Things For The Web</h3>
                      <div class="cv-btn">
-                        <a href="C:\Users\SUYASH GAIKWAD\Downloads\Suyash Gaikwad DBA.pdf">Donwload CV</a>
+                        <a href="Suyash Gaikwad DBA.pdf">Donwload CV</a>
                      </div>
                      <div class="social">
                         <a href="https://www.linkedin.com/in/suyash-gaikwad-762374219/"><i class="fa fa-linkedin"></i></a>
@@ -220,7 +220,7 @@
                
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="C:\Users\SUYASH GAIKWAD\OneDrive\Desktop\Myportpholio\img\portfolio\Certificate for Mr. for _Manufacturing Process_ (1)_page-0001.jpg"alt="portfolio" />
+                     <img src="Certificate for Mr. for _Manufacturing Process_ (1)_page-0001.jpg"alt="portfolio" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
@@ -231,7 +231,7 @@
 
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="C:\Users\SUYASH GAIKWAD\OneDrive\Desktop\Myportpholio\img\portfolio\Certificate for Suyash Pramod Gaikwad for _Quiz competition on Basics of Automobile Engineering_ (1)_page-0001.jpg"alt="portfolio" />
+                     <img src="Certificate for Suyash Pramod Gaikwad for _Quiz competition on Basics of Automobile Engineering_ (1)_page-0001.jpg"alt="portfolio" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
@@ -247,7 +247,7 @@
 
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="C:\Users\SUYASH GAIKWAD\OneDrive\Desktop\Myportpholio\img\portfolio\Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" alt="portfolio" />
+                     <img src="Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" alt="portfolio" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
