--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="Certificate for Mr. for _Manufacturing Process_ (1)_page-0001.jpg"alt="portfolio" />
+                     <img src="Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
