--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="Certificate for Suyash Pramod Gaikwad for _Quiz competition on Basics of Automobile Engineering_ (1)_page-0001.jpg"alt="portfolio" />
+                     <img src="Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
@@ -247,7 +247,7 @@
 
                <div class="item" data-id="app">
                   <div class="inner">
-                     <img src="Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" alt="portfolio" />
+                     <img src="Certificate for Gaikwad Suyash Pramod for _National Quiz Series 2020- ..._ (1)_page-0001.jpg" />
                      <div class="overlay">
                         <span class="fa fa-plus"></span>
                         <h4>Quiz Competition</h4>
