--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="about-content">
                <div class="row">
                   <div class="img">
-                     <img src="img/me.png" alt='me' />
+                     <img src="me.png" alt='me' />
                   </div>
                   <div class="text">
                      <h4>I'm Suyash Gaikwad</h4>
