--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                <div class="testimonials-box">
                   <div class="testimonials-img">
                      <div class="test-img">
-                        <img src="./img/testimonials/1.jpeg" />
+                        <img src="1.jpeg" />
                      </div>
                      <div class="testimonials-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, aliquam. Corrupti
@@ -298,7 +298,7 @@
                   </div>
                   <div class="testimonials-img">
                      <div class="test-img">
-                        <img src="./img/testimonials/2.jpg" />
+                        <img src="2.jpg" />
                      </div>
                      <div class="testimonials-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, aliquam. Corrupti
@@ -309,7 +309,7 @@
                   </div>
                   <div class="testimonials-img">
                      <div class="test-img">
-                        <img src="./img/testimonials/3.jpg" />
+                        <img src="3.jpg" />
                      </div>
                      <div class="testimonials-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, aliquam. Corrupti
@@ -320,7 +320,7 @@
                   </div>
                   <div class="testimonials-img">
                      <div class="test-img">
-                        <img src="./img/testimonials/4.jpg" />
+                        <img src="4.jpg" />
                      </div>
                      <div class="testimonials-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, aliquam. Corrupti
