--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Suyash Gaikwad | Junior Database Developer</title>
+   <title>Suyash Gaikwad | Database Developer</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -62,7 +62,7 @@
                      </div>
                   <h3>Hi I'm</h3>
                      <h1>Suyash Gaikwad</h1>
-                     <h3>I Build Things For The Web</h3>
+                     <h3>Crafting Data-Driven Solutions for the Digital World</h3>
                      <div class="cv-btn">
                         <a href="Suyash Gaikwad DBA.pdf">Donwload CV</a>
                      </div>
@@ -102,19 +102,20 @@
                      <h6>A <span>Database developer</span> and <span>Software Engineer</span> Working in
                         Mverse Technologies,Mumbai,Maharashtra
                      </h6>
-                     <p> 1 Year Experience in database development with Responsible for creating or maintaining the database components of an application that uses the Database technology.
+                     <p> 2 Year Experience in database development with Responsible for creating or maintaining the database components of an application that uses the Database technology.
 
-                        1. Data gathering before development of a database. Designing, developing, testing, implementation and maintenance of new and existing databases. 
-                        2. Modifying databases and products according to client needs.
-                        3. Working to create functional requirements. 
-                        4. Designing and developing database architectures.
-                        5. Performance tuning and Query Optimization. 
-                        6.Involve in coding required stored procedure, user defined functions & triggers using static/dynamic SQL.
-                        7. Development and optimization of SQL Queries.
-                        8. Strong in Queries, Stored Procedure, Functions and Performance tuning.
-                        9. Good in Review of database design. 
-                        10. Creation of T-SQL, Stored Procedures, Functions, Triggers.
-                        11. Strong analytical skills with the ability to collect, organise, analyse the information with detail and accuracy. Experience in coding complex requirements as well as support functions of business solutions.
+                        1. Data gathering before development of a database. Designing, developing, testing, implementation and maintenance of new and existing databases. <br>
+                        2. Modifying databases and products according to client needs.<br>
+                        3. Working to create functional requirements. <br>
+                        4. Designing and developing database architectures.<br>
+                        5. Performance tuning and Query Optimization. <br>
+                        6.Involve in coding required stored procedure, user defined functions & triggers using static/dynamic SQL.<br>
+                        7. Development and optimization of SQL Queries.<br>
+                        8. Strong in Queries, Stored Procedure, Functions and Performance tuning.<br>
+                        9. Good in Review of database design.<br> 
+                        10. Creation of T-SQL, Stored Procedures, Functions, Triggers.<br>
+                        11. Strong analytical skills with the ability to collect, organise, analyse the information with detail and accuracy. <br>
+                        12.Experience in coding complex requirements as well as support functions of business solutions.<br>
                      </p>
                      <div class="skills">
                         <h6>Here are My few Tech Stack I've been working:</h6>
